deployment-app-a-initial.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: app-a
          image: joramnv/ktor-demo-app-a:0.0.1-SNAPSHOT-coiuq
          ports:
            - containerPort: 8123
