svc-app-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-a
spec:
  selector:
    app: app-a
  ports:
    - port: 8124
      targetPort: 8123
  type: ClusterIP
