svc-app-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-b
spec:
  selector:
    app: app-b
  ports:
    - port: 8224
      targetPort: 8223
  type: ClusterIP
