ingress-setup.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-setup
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /testpath(/|$)(.*)
        backend:
          serviceName: ktor-demo-server-svc
          servicePort: 8124
